2009-12-18  Peter Kasting  <pkasting@google.com>

        Reviewed by Simon Fraser.

        Add a comment about some confusing code that otherwise would look like
        it might be a bug.
        https://bugs.webkit.org/show_bug.cgi?id=32534

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::updateScrollInfoAfterLayout):

2009-12-18  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Messed up the XCode file, trying to fix.

        * WebCore.xcodeproj/project.pbxproj:

2009-12-18  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed, fix typos in WebCore.xcodeproj.

        * WebCore.xcodeproj/project.pbxproj:

2009-12-18  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Eric Seidel.

        SVGAngle / SVGPreserveAspectRatio should be POD types
        https://bugs.webkit.org/show_bug.cgi?id=32758

        Convert SVGAngle / SVGPreserveAspectRatio to be non-refcounted types, just
        like it has been done for SVGMatrix / SVGLength before.

        This patch prepares removing the special DOMObjectWithSVGContext hack.
        No change in functionality, thus no new tests.

        * WebCore.xcodeproj/project.pbxproj: Add SVGNames.h to the 'Copy Generated Headers' phase, and set SVGAngle/SVGPreserveAspectRatio role to 'Private', so WebKit can access it.
        * bindings/scripts/CodeGenerator.pm: Recognize SVGAngle / SVGPreserveAspectRatio as new POD-types (similar to SVGLength)
        * bindings/scripts/CodeGeneratorJS.pm: Ditto. 
        * bindings/scripts/CodeGeneratorV8.pm: Ditto.
        * bindings/v8/V8Index.h: Ditto.
        * rendering/RenderSVGImage.cpp: All following changes, modify SVGAngle/SVGPreserveAspectRatio access, as they are non-refcounted now.
        (WebCore::RenderSVGImage::adjustRectsForAspectRatio):
        (WebCore::RenderSVGImage::paint):
        * rendering/RenderSVGImage.h:
        * svg/SVGAngle.h:
        * svg/SVGAngle.idl:
        * svg/SVGAnimatedTemplate.h: